# freer

./: .gitignore  README.md  freer.cabal
bench/: Core.hs
examples/src/: Coroutine.hs  HandleRegion.hs  Main.hs  NonDetEff.hs  Region.hs  Teletype.hs
src/: Eff.hs
src/Control/Monad/Freer/: Coroutine.hs  Exception.hs  Functor.hs  Internal.hs  Reader.hs  SafeIO.hs  State.hs  Writer.hs
src/Data/Open/Union/: Internal.hs
src/Eff/: Coroutine.hs  Embedded.hs  Exc.hs  Exception.hs  Functor.hs  Internal.hs  Reader.hs  Region.hs  SafeIO.hs  State.hs  TH.hs  Writer.hs
src/Eff/Coroutine/: Pure.hs
src/Eff/Exc/: Pure.hs
src/Eff/Reader/: Pure.hs
src/Eff/State/: Pure.hs
src/Eff/Writer/: Pure.hs
tests/: Tests.hs
tests/Tests/: Coroutine.hs  Exc.hs  Exception.hs  Loop.hs  NonDetEff.hs  Reader.hs  State.hs
